the picture should work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 	<a href= "https://www.google.com">test</a>
 	<a href="second.html"> the second page </a>
+	<p>
+	<img src = "bliss.jpeg"/>
+	</p>
+	<a href= "third.html"> the third page</a>
 
 
 
