third time is the charm

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<a href= "https://www.google.com">test</a>
 	<a href="second.html"> the second page </a>
 	<p>
-	<img src = "bliss.jpeg"/>
+	<img src = "bliss.jpg"/>
 	</p>
 	<a href= "third.html"> the third page</a>
 
