--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<a href= "https://www.google.com">test</a>
-	<a href="second.html"> the second page </a>
+	<a href="https://www.redlandsusd.net/cvhs"> Citrus Valley Home Page </a>
 	<p>
 	<img src = "bliss.jpg"/>
 	</p>
