--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<p>
 	<img src = "bliss.jpg"/>
 	</p>
-	<a href= "third.html"> the third page</a>
+	<a href= "third.html"> this space is filler</a>
+	<a href ="fourth.html"> this is more filler </a>
 
 
 
