--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <title> Hello World </title>
-
+<link rel="shortcut icon"  href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<a href= "https://www.google.com">test</a>
