--- a/index.html
+++ b/index.html
@@ -1,25 +1,9 @@
 <html>
-
-<head>
-
-<title> Hello World </title>
-<link rel="shortcut icon"  href="favicon.ico" type="image/x-icon">
+	<head>
+	<title> This will be added later</title>
+	<link rel='stylesheet' href='./css/mystyle.css'>
 </head>
 <body>
-	<a href= "https://www.google.com">test</a>
 	
-	<a href="https://www.redlandsusd.net/cvhs"> Citrus Valley Home Page </a>
-	<p>
-	<img src = "bliss.jpg"/>
-	</p>
-	<a href= "third.html"> this space is filler</a>
-	
-	<a href ="fourth.html"> this is more filler </a>
-
-
-
-
-
-
 </body>
 </html>
