--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <html>
 	<head>
-	<title> This will be added later</title>
+	<title> Hello World </title>
 	<link rel='stylesheet' href='./css/mystyle.css'>
 </head>
 <body>
+	<header>
+		<div class='container'>
+			<div id ="branding">
+				<h1> Tristan's Website</h1>
+			</div>
+			<nav>
+				<ul>
+				<li> <a href= "index.html">Home</a></li>
+				<li> <a href= "about.html">About</a></li>
+				<li> <a href= "resources.html">Resources</a></li>				
+				</li>
+				</ul>
+			</nav>
+		</div>
+	</header>
 	
 </body>
 </html>
