--- a/index.html
+++ b/index.html
@@ -20,5 +20,31 @@
 		</div>
 	</header>
 	
+	<section id="showcase">
+		<div class="container">
+			<h1> A Complete Guide to Cooking</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ultricies pulvinar neque, a pretium neque. Nullam aliquam libero </p>
+		</div>
+	</section>
+	<section id="boxes">
+		<div class="container">
+			<div class="box">
+				<h4>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h4>
+				<p>idunt at, lacinia accumsan lorem. Donec non lectus</p>
+			</div>
+			<div class='box'>
+				<img src="./img/Knife.jpeg">
+				<h4>COMPLETE GUIDES</h4>
+				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
+			<div class ="box">
+				<h4>USEFUL TIPS</h4>
+				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
+			
+				
+			</div>	
+				
+			</div>
+		</div>
+	</section>
 </body>
 </html>
