--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<section id="boxes">
 		<div class="container">
 			<div class="box">
-				<img src="./img/flour.jpg">
+				<img src="./img/flour.jpeg">
 				<h4>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h4>
 				<p>idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>
