--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 	<title> Hello World </title>
-	<link rel='stylesheet' href='./css/mystyle.css'>
+	<link rel='stylesheet' href='mystyle.css'>
 </head>
 <body>
 	<header>
