--- a/resources.html
+++ b/resources.html
@@ -9,7 +9,7 @@ Resources
 	<header>
 		<div class='container'>
 			<div id ="branding">
-				<h1>About</h1>
+				<h1>Resources</h1>
 			</div>
 			<nav>
 				<ul>
@@ -25,7 +25,7 @@ Resources
 	<section id="main">
 		<div class="container">
 		    <article id="main-col">
-		     <h1 class= "page-title"> About Us</h1>
+		     <h1 class= "page-title"> Resources</h1>
 		     <p>
 		      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra porta porta. Vestibulum sodales finibus porttitor. Duis eu dolor eu elit imperdiet accumsan. In laoreet rhoncus consectetur. Nam augue metus, faucibus sed mauris non, sollicitudin laoreet eros. Quisque luctus gravida neque at imperdiet. Vestibulum interdum mollis libero. Duis vulputate sem molestie libero facilisis tincidunt. Fusce facilisis ante urna, vel egestas nisi luctus vel. Nam in tellus id ex faucibus tempor eget 
 		     </p>
