--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 	<section id="boxes">
 		<div class="container">
 			<div class="box">
-				<img src="./img/flour.jpg">
+				<img src="flour.jpg">
 				<h4>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h4>
 				<p>idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>
 			<div class='box'>
-				<img src="./img/Knife.jpg">
+				<img src= "Knife.jpg">
 				<h4>COMPLETE GUIDES</h4>
 				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			<div class ="box">
