--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
 	<section id="main">
 		<div class="container">
 		    <article id="main-col">
-		     <h1 class= "page-title"> About Us</h1>
+		     <h1 class= "page-title"> <span style="color:blue About Us"></span>
+		     </h1>
 		     <p>
 		      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra porta porta. Vestibulum sodales finibus porttitor. Duis eu dolor eu elit imperdiet accumsan. In laoreet rhoncus consectetur. Nam augue metus, faucibus sed mauris non, sollicitudin laoreet eros. Quisque luctus gravida neque at imperdiet. Vestibulum interdum mollis libero. Duis vulputate sem molestie libero facilisis tincidunt. Fusce facilisis ante urna, vel egestas nisi luctus vel. Nam in tellus id ex faucibus tempor eget 
 		     </p>
@@ -31,6 +32,7 @@
 		    <aside id="sidebar">
 		        <h3> What We Do</h3>
 		        <p>
+		            <p class="dark">
 		           Duis ac tortor viverra, sagittis nisi at, semper metus. Morbi viverra tortor id dui pretium, at eleifend diam pharetra. Nam posuere mattis urna, nec varius libero. Praesent ac massa non purus ultrices dictum nec et ligula. Fusce fermentum consequat nisi, id tincidunt nibh scelerisque at. Aliquam ullamcorper sagittis sapien tristique hendrerit. Duis ornare commodo turpis sed tempor
 		        </p>
 		    </aside>
