--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
 		        <p>
 		            <p class="dark">
 		           Duis ac tortor viverra, sagittis nisi at, semper metus. Morbi viverra tortor id dui pretium, at eleifend diam pharetra. Nam posuere mattis urna, nec varius libero. Praesent ac massa non purus ultrices dictum nec et ligula. Fusce fermentum consequat nisi, id tincidunt nibh scelerisque at. Aliquam ullamcorper sagittis sapien tristique hendrerit. Duis ornare commodo turpis sed tempor
+		           My School <a href= "https://www.redlandsusd.net/cvhs"></a>
 		        </p>
 		    </aside>
 			</div>	
