--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class='box'>
 				<h4>COMPLETE GUIDES</h4>
 				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
-			<div class ="box">
+			<div class ="box" id= "box2">
 				<h4>USEFUL TIPS</h4>
 				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>	
