--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 	<section id="main">
 		<div class="container">
 		    <article id="main-col">
-		     <h1 class= "page-title"> <span style="color:blue About Us"></span>
+		     <h1 class= "page-title"> <span style="color:black About Us"></span>
 		     </h1>
 		     <p>
 		      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
