--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 		        <p>
 		            <p class="dark">
 		           Duis ac tortor viverra, sagittis nisi at, semper metus. Morbi viverra tortor id dui pretium.
-		           My School <a href= "https://www.redlandsusd.net/cvhs"></a>
+		           My School <a href="https://www.redlandsusd.net/cvhs"><li>  </li></a>
 		        </p>
 		    </aside>
 			</div>	
