--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<div class="container">
 			<div class="box">
 				<h4>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h4>
+				<img src="knife.jpg"
 				<p>idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>
 			<div class='box'>
