--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<link rel='stylesheet' href='mystyle.css'>
 </head>
 <body>
+<?php
+echo "test"
+?>
 	<header>
 		<div class='container'>
 			<div id ="branding">
