--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 	<link rel='stylesheet' href='mystyle.css'>
 </head>
 <body>
-<?php
-echo "test"
-?>
 	<header>
 		<div class='container'>
 			<div id ="branding">
@@ -32,15 +29,16 @@ echo "test"
 	<section id="boxes">
 		<div class="container">
 			<div class="box">
-				<h4>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h4>
 				<img src="knife.jpg"
+				<h3>SUITABLE FOR ALL LEVELS OF EXPERIENCE</h3>
 				<p>idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>
 			<div class='box'>
-				<h4>COMPLETE GUIDES</h4>
-				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
-			<div class ="box" id= "box2">
-				<h4>USEFUL TIPS</h4>
+				<h3>COMPLETE GUIDES</h3>
+				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p> 
+				</div>
+			<div class ="box">
+				<h3>USEFUL TIPS</h3>
 				<p> idunt at, lacinia accumsan lorem. Donec non lectus</p>
 			</div>	
 				
