--- a/about.html
+++ b/about.html
@@ -1,19 +1,20 @@
 <html>
 	<head>
-	<title> About us </title>
+	<title> About Us </title>
 	<link rel='stylesheet' href='mystyle.css'>
 </head>
 <body>
 	<header>
 		<div class='container'>
 			<div id ="branding">
-				<h1>About</h1>
+				<h1>Past Projects</h1>
 			</div>
 			<nav>
 				<ul>
 				<li> <a href= "index.html">Home</a></li>
 				<li> <a href= "about.html">About</a></li>
-				<li> <a href= "resources.html">Resources</a></li>				
+				<li> <a href= "resources.html">Resources</a></li>
+				<li> <a href= "portfolio.html">Portfolio</a></li>
 				</li>
 				</ul>
 			</nav>
