--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 				<ul>
 				<li> <a href= "index.html">Home</a></li>
 				<li> <a href= "about.html">About</a></li>
-				<li> <a href= "resources.html">Resources</a></li>				
+				<li> <a href= "resources.html">Resources</a></li>
+				<li> <a href= "portfolio.html"> Portfolio</a></li>
 				</li>
 				</ul>
 			</nav>
