--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@ Portfolio
 	<header>
 		<div class='container'>
 			<div id ="branding">
-				<h1>portfolio</h1>
+				<h1>Past Projects</h1>
 			</div>
 			<nav>
 				<ul>
@@ -20,6 +20,10 @@ Portfolio
 				</li>
 				</ul>
 			</nav>
+			<button type="button"
+			onclick="document.getElementById('demo').innerHTML = Date()">
+			Click to display Date and Time.</button>
+			<p id="demo"></p>
 		</div>
 	</header>
 	<section id="main">
