--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<header>
 		<div class='container'>
 			<div id ="branding">
-				<h1>Past Projects</h1>
+				<h1>About Us</h1>
 			</div>
 			<nav>
 				<ul>
