--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,9 +30,13 @@ Portfolio
 		<div class="container">
 		    <article id="main-col">
 		     <h1 class= "page-title"> portfolio</h1>
+		     <p>An example of past projects</p>
+		     <p>/loop from 1 to 10.py</p>
+		     <p> Sed aliquam orci eget erat volutpat tempor.</p>
 	</section>
 	<footer>
 		<p> Tristan Web Design, Copyright &copy; 2017</p>
+		
 	</footer>
 </body>
 </html>
